<resources>
    <string name="app_name">ujs自动健康打卡</string>
    <string name="tip_username">用户名：</string>
    <string name="tip_password">密码：</string>
    <string name="tip_autotime">自动打卡时间：</string>
    <string name="input_default">未设置</string>
    <string name="button_test">打卡测试</string>
    <string name="button_save">保存执行</string>
    <string name="button_cancle">取消定时任务</string>
    <string name="menu_StartInterface">打开自启动设置</string>
    <string name="menu_DetailInterface">打开APP设置</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>