<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/input_default"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tip_username"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/input_default"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tip_password"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <TextView
        android:id="@+id/tip_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/tip_username"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_username"
        app:layout_constraintEnd_toStartOf="@+id/input_username"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tip_autotime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_autotime"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_selectTime"
        app:layout_constraintEnd_toEndOf="@+id/tip_password" />

    <TextView
        android:id="@+id/tip_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_password"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_password"
        app:layout_constraintEnd_toEndOf="@+id/tip_username" />

    <Button
        android:id="@+id/button_test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/button_test"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_save"
        app:layout_constraintEnd_toStartOf="@+id/button_save"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_test"
        app:layout_constraintTop_toBottomOf="@+id/button_selectTime" />

    <TextView
        android:id="@+id/text_log"
        android:layout_width="382dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save" />

    <Button
        android:id="@+id/button_selectTime"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:text="@string/input_default"
        app:layout_constraintStart_toEndOf="@+id/tip_autotime"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <Button
        android:id="@+id/button_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_cancle"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/button_selectTime"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

</androidx.constraintlayout.widget.ConstraintLayout>